--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,11 @@ spring.application.name=agenda_SSD_back
 spring.application.version=1.0.0
 
 # Configurações do banco de dados H2
-spring.datasource.url=jdbc:h2:mem:agendadatabase;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:agendadb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
+# Console H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
