build: adicionado spring-boot-starter-data-jpa no pom.xml | feat: criado UserRepository, testado console h2 - funcionando

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.datasource.password=
 # Console H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+# Configurações do JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
