--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
             <version>2.8.9</version>
         </dependency>
 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
