build: alterado o banco para persistir dados em arquivos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,74 @@
+# ==========================================================
+# ? Informações da aplicação
+# ==========================================================
 spring.application.name=agenda_SSD_back
 spring.application.version=1.0.0
 
-# Configurações do banco de dados H2
-spring.datasource.url=jdbc:h2:mem:agendadb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+
+# ==========================================================
+# ? Banco de Dados H2 (MODO PERSISTENTE EM ARQUIVO)
+# ==========================================================
+# Cria o banco fisicamente em ./data/agendadb.mv.db.
+# Esse banco será preservado após o encerramento da aplicação.
+spring.datasource.url=jdbc:h2:file:./data/agendadb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=LEGACY
+
+# Driver do H2
 spring.datasource.driver-class-name=org.h2.Driver
+
+# Usuário e senha padrão do H2
 spring.datasource.username=sa
 spring.datasource.password=
 
-# Console H2
+
+# ==========================================================
+# ? Console Web H2 (interface gráfica)
+# ==========================================================
+# Ativa console web do H2 (http://localhost:8080/h2-console)
 spring.h2.console.enabled=true
+
+# Caminho do console
 spring.h2.console.path=/h2-console
 
-# Configurações do JPA
+# Permite abrir arquivos locais no console H2
+spring.h2.console.settings.web-allow-others=true
+
+
+# ==========================================================
+# ? JPA / Hibernate
+# ==========================================================
+# update:
+# - Cria as tabelas se não existirem
+# - Mantém dados existentes
+# - NÃO apaga nada
 spring.jpa.hibernate.ddl-auto=update
+
+# Exibir SQL no console
 spring.jpa.show-sql=true
+
+# Dialeto correto para H2 + Hibernate 6
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# Remove warnings relacionados à criação de LOBs
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+
+# ==========================================================
+# ? Execução de schema.sql e data.sql
+# ==========================================================
+# Garante que o Spring verifique e execute arquivos SQL do resources
+# Somente são executados se o banco estiver vazio.
+spring.sql.init.mode=always
+
+# Faz o Spring rodar os arquivos SQL SOMENTE depois das tabelas existirem.
+# Sem isso, o data.sql falha quando o Hibernate ainda não criou as tabelas.
+spring.jpa.defer-datasource-initialization=true
+
+
+# ==========================================================
+# ? Logging detalhado (opcional)
+# ==========================================================
+# Mostra todas as consultas SQL
+logging.level.org.hibernate.SQL=DEBUG
+
+# Mostra os parâmetros das consultas
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
